src/stylesheets/SkillCarrousel.css
div.carrousel-wrapper {
    position: relative;
    padding: 0 40px;
}

button.carrousel-arrow {
    position: absolute;
    top: 50%;
    transform: translateY(-50%);

    width: 32px;
    height: 32px;

    background: var(--bg-secondary);
    border: none;
    border-radius: 4px;
    box-shadow: var(--box-shadow);
    cursor: pointer;

    font-size: 1.5em;
    line-height: 1;
    color: var(--accent-light);

    display: flex;
    align-items: center;
    justify-content: center;

    transition: opacity 0.2s;
    z-index: 1;
}

button.carrousel-arrow.left {
    left: -16px;
}

button.carrousel-arrow.right {
    right: -16px;
}

button.carrousel-arrow:disabled {
    opacity: 0.3;
    cursor: default;
}

button.carrousel-arrow:not(:disabled):hover {
    opacity: 0.7;
}

div.carrousel {

    max-width: 100%;

    display: flex;
    align-items: center;

    padding: 16px 0;
    margin: 8px 0;

    gap: 16px;

    overflow-x: auto;
    scrollbar-width: none;

    mask: linear-gradient(to right, var(--fade-left, black), black 24px, black calc(100% - 24px), var(--fade-right, black));
    -webkit-mask: linear-gradient(to right, var(--fade-left, black), black 24px, black calc(100% - 24px), var(--fade-right, black));

}

div.carrousel::-webkit-scrollbar {
    display: none;
}

div.carrousel .skill {
    
    width: 200px;
    min-width: 200px;
    
    background-color: var(--bg-secondary);
    
    box-shadow: var(--box-shadow);
    
    border-radius: 8px;

    padding: 8px;
    
}

div.carrousel .skill h3 {
    
    font-size: 1em;
    
}

div.carrousel .skill hr {
    
    margin: 8px 0;
    
}

div.carrousel .skill span {
    
    margin-left: 8px;
    font-size: .75em;
    
}

div.carrousel .skill .barholder {
    
    width: 180px;
    height: 8px;
    
    margin: 8px 0;
    
    background-color: var(--bg-tertiary);
    border-radius: 4px;
    
}

div.carrousel .skill .barholder .bar {

    height: 8px;
    border-radius: 4px;

    background-color: var(--accent-light);

}
@media (max-width: 768px) {

    div.carrousel {

        mask: linear-gradient(to right, var(--fade-left, black), black 8px, black calc(100% - 8px), var(--fade-right, black));
        -webkit-mask: linear-gradient(to right, var(--fade-left, black), black 8px, black calc(100% - 8px), var(--fade-right, black));

    }

}

